--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ baseURL = "http://example.org/"
 theme = "LoveIt"
 
 # website title
-title = "My New Hugo Site"
+title = "Janet's Blog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
 languageCode = "zh-CN"
@@ -13,7 +13,7 @@ languageName = "简体中文"
 
 # Author config
 [author]
-  name = "xxxx"
+  name = "Janet"
   email = ""
   link = ""
 
